--- a/neo_watcher/config.yaml
+++ b/neo_watcher/config.yaml
@@ -3,7 +3,7 @@ image: ghcr.io/danq8/neo_watcher
 slug: hamh
 name: Neo Watcher
 description: Publish your entities from Home Assistant to any Matter-compatible controller like Alexa, Apple Home or Google Home.
-url: https://github.com/danq8/home-assistant-matter-hub
+url: https://github.com/danq8/neo_watcher
 panel_icon: mdi:hub
 panel_title: Neo Watcher
 homeassistant: 2024.1.0
